@@ -21,7 +21,7 @@ my $exitValue = 0;
 # Display command help
 sub usage {
     print <<EOS;
-Usage: $0 [-c|-b|-s][--array][job_ids][-h][-V]
+Usage: $0 [-c|-b|-s|--force-terminate-finishing-job][--array][job_ids][-h][-V]
 Delete or send checkpoint signal to jobs.
 Options:
   -h, --help              show this help screen
@@ -34,6 +34,9 @@ Options:
       --sql               delete/checkpoint jobs which respond to the SQL
                           where clause on the table jobs
                           (ex: "project = 'p1'")
+      --force-terminate-finishing-job
+                          force the job_ids in Finishing state to turn into
+                          Terminated (must be used at a last resort)
   -V, --version           print OAR version number
 EOS
     exit(1);
@@ -74,6 +77,7 @@ my $Version;
 my $Sql_property;
 my $Besteffort;
 my $array;
+my $Force_terminate_finishing_job;
 
 GetOptions ("checkpoint|c" => \$Checkpoint,
             "signal|s:s" => \$signal,
@@ -81,6 +85,7 @@ GetOptions ("checkpoint|c" => \$Checkpoint,
             "help|h" => \$sos,
             "array" => \$array,
             "sql=s"   => \$Sql_property,
+            "force-terminate-finishing-job" => \$Force_terminate_finishing_job,
             "version|V" => \$Version
            );
 
@@ -251,6 +256,38 @@ if (defined($Checkpoint)){
                 print("$strComment\n");
                 OAR::IO::add_new_event($base,"SIG_SUCCESS",$idJob,$strComment);
             }
+        }
+    }
+}elsif (defined($Force_terminate_finishing_job)){
+    my $lusr= $ENV{OARDO_USER};
+    if (($lusr ne "oar") and ($lusr ne "root")){
+        $exitValue = 8;
+        warn("You must be oar or root to use the --force-terminate-finishing-job option\n");
+    }else{
+        my $max_duration = 2 * OAR::Tools::get_taktuk_timeout() + OAR::Conf::get_conf_with_default_param("SERVER_PROLOGUE_EPILOGUE_TIMEOUT",0);
+        foreach my $j (@job_ids){
+            print("Force the termination of the job = $j ...");
+            if (OAR::IO::get_job_state($base, $j) eq "Finishing"){
+                my $duration = OAR::IO::get_job_duration_in_state($base, $j, "Finishing");
+                if ($duration > $max_duration){
+                    OAR::IO::add_new_event($base,"FORCE_TERMINATE_FINISHING_JOB",$j,"[oardel] Force to Terminate the job $j which is in Finishing state");
+                    print("REGISTERED.\n");
+                }else{
+                    $exitValue = 11;
+                    print("ERROR.\n");
+                    warn("The job $j is not in the Finishing state for more than ".$max_duration."s (".$duration."s).\n");
+                }
+            }else{
+                $exitValue = 10;
+                print("ERROR.\n");
+                warn("The job $j is not in the Finishing state.\n");
+            }
+        }
+        OAR::IO::disconnect($base);
+        my $strError = OAR::Tools::notify_tcp_socket($remote_host,$remote_port,"ChState");
+        if (defined($strError)){
+            warn("$strError\n");
+            $exitValue = 2;
         }
     }
 }elsif (defined($Besteffort)){
